# proposal-generator-v3

./: README.md
proposal_generator/: README.md  pyproject.toml  report.md  solution_summary.md
proposal_generator/src/proposal_generator/: crew.py  main.py  model_config.py
proposal_generator/src/proposal_generator/config/: agents.yaml  tasks.yaml
